--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,318 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+
+}
+
+.bv {
+  border: 1px solid red;
 }
 
 .header {
+  margin: 0;
+  padding: 0;
+  width: 100%;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  background-color: #f2f2f2;
+  overflow: hidden;
+ }
+
+.logo {
+  padding: 0;
+  margin: 0;
+  width: 228px;
+  height: 32px; 
+  background-image:url(../images/logo_place_header.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  z-index: 3;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__logo {
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  padding: 0;
+  margin: 0;
+  width: 730px;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__title_content {
+  font-size: 102px;
+  font-weight: 600;
+  line-height: 96px;
+  margin-left:64px;
+}
+
+.header__subtitle {
+  padding: 0;
+  margin: 0;
+  width: 388px;
+  position: absolute;
+  left:64px;
+  bottom: 30px;
+  z-index: 3;
+}
+
+.header__subtitle_content {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+
+.header__link_subtitle {
+  font-size: 18px;
+  text-decoration: none;
+  color: #2f80ed;
+}
+
 .header__square-pic {
+  padding: 0;
+  margin: 0;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  z-index: 1;
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__main-illustration {
+  padding: 0;
+  margin: 0;
+  width: 765px;
+  height: 608px; 
+  background-image:url(../images/two_again.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position:center;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  right: 0;
+}
+
+main {
+  width:100%;
+}
+
+.description {
+  margin: 0;
+}
+
+.two-columns {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 100px auto 0 auto;
+  max-width: 80%;
+}
+
+.two-columns__brief {
+  padding: 0;
+  margin: 0;
+  width: 175px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  color: #2f80ed;
+}
+
+.two-columns__main-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
+  }
+
+.two-columns__paragraph {
+  padding: 0;
+  margin: 0 0 30px 0;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  }
+
+  .two-columns__main-text :last-child {
+  margin-bottom:0px;
+  } 
+
+.two-columns__span-accent {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 34px;
+} 
+
+.digits {
+  margin: 100px 0 100px 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section__title {
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.15;
+  padding: 0;
+  width: 60%;
+  text-align: center;
+  margin: 0;
+  }
+
+.section__subtitle {
+  margin: 0;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+  width: 60%;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.table {
+  padding: 0;
+  margin: 0;
+  width: 1100px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  }
+
+.table__cell {
+  width: 250px;
+  list-style-type: none;
+  margin: 0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  padding-top: 60px;
+  margin: 0;
+}
+
+.table__text {
+  padding-top: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  min-height: 900px;
+  background-color: #f2f2f2;
+  z-index: 0;
+}
+
+.feynman__title {
+  font-size: 120px;
+  line-height: 1.15;
+  text-align: center;
+  width: 648px;
+  margin: 100px auto 0 auto;
+  }
+
+.feynman__subtitle {
+  margin: 70px auto 0 auto;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  color: #2f80ed;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  text-decoration: none;
+  }
+
+.feynman__img-photo {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1f1f1f;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin: 90px auto 0 auto;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  margin: 0 auto 90px auto;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__text_theme_dark {
+color: #f2f2f2;
+}
+
+.table__heading_theme_dark {
+padding-top: 0;
+}
+
+.kaufman-triangle {
+padding: 0;
+margin: 0;
+width: 877px;
+height: 877px; 
+background-image:url(../images/kaufman-triangle.svg);
+background-size:cover;
+background-repeat: no-repeat;
+background-position:center;
+position: absolute;
+z-index: -1;
+top: 0;
+right: -210px;
 }
