--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,12 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
   display:flex;
   flex-direction: column;
   align-items:center;
 
-}
-
-.bv {
-  border: 1px solid red;
 }
 
 .header {
@@ -36,18 +28,18 @@
   padding: 0;
   margin: 0;
   width: 228px;
-  height: 32px; 
-  background-image:url(../images/logo_place_header.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: absolute;
+  height: 32px;
   z-index: 3;
 }
 
-.header__logo {
+.logo_place_header {
   top: 30px;
   left: 64px;
+  position: absolute;
+}
+
+.logo_place_footer {
+
 }
 
 .header__title {
@@ -231,7 +223,7 @@ main {
   flex-direction: column;
   align-items: center;
   position: relative;
-  min-height: 900px;
+  min-height: 890px;
   background-color: #f2f2f2;
   z-index: 0;
 }
@@ -301,24 +293,93 @@ main {
 }
 
 .table__text_theme_dark {
-color: #f2f2f2;
+  color: #f2f2f2;
 }
 
 .table__heading_theme_dark {
-padding-top: 0;
+  padding-top: 0;
 }
 
 .kaufman-triangle {
-padding: 0;
-margin: 0;
-width: 877px;
-height: 877px; 
-background-image:url(../images/kaufman-triangle.svg);
-background-size:cover;
-background-repeat: no-repeat;
-background-position:center;
-position: absolute;
-z-index: -1;
-top: 0;
-right: -210px;
+  padding: 0;
+  margin: 0;
+  width: 877px;
+  height: 877px; 
+  background-image:url(../images/kaufman-triangle.svg);
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position:center;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: -210px;
+}
+
+.footer {
+  display: flex;
+  background-color: #1f1f1f;
+  width: 100%;
+  min-height: 350px;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  margin: 60px auto 40px auto;
+}
+
+.footer__column {
+  
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.footer__author {
+  padding: 18px 0;
+  margin: 0;
+  font-weight: normal;
+  line-height: 25px;
+  font-size: 18px;
+   
+}
+
+.footer__column_content_info {
+
+}
+
+.footer__column-heading {
+  margin: 0;
+  font-weight: 600;
+  line-height: 30px;
+  font-size: 18px;
+ }
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 0 16px 0;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  }
+
+.footer__column_content_social{
+  
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
 }
